bug(): fix alignment issues and also fix javascript display issues.
- use flex box to fix alignment issues on the main header
- add some javascript code to the admin page to enable rendering of candidates currently running for a particular offiice

[delivers #163344226 #163346644]

--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -18,6 +18,10 @@ body {
   padding: 10px;
   background-size: cover; 
 }
+.call-action {
+  text-decoration: none;
+  color: inherit;
+}
 
 .section-title {
   color: #2ddf5c;
