--- a/UI/css/users.css
+++ b/UI/css/users.css
@@ -34,6 +34,7 @@ body {
   margin: 0 auto;
   justify-content: space-between;
   margin-bottom: 15px;
+  margin-top: 80px;
 }
 
 .formgroup {
@@ -329,6 +330,7 @@ input[type = "radio"] {
   padding: 14px 40px;
   color: white;
   cursor: pointer;
+  margin-top: 80px;
 }
 #btn2 {
   font-size: 15px;
